force-app/main/default/objects/Student__c/fields/FormOfStudy__c.field-meta.xml
<CustomField>
    <fullName>FormOfStudy__c</fullName>
    <label>Form of Study</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FormOfStudy</valueSetName>
    </valueSet>
</CustomField>