force-app/main/default/objects/Student__c/fields/StudentID__c.field-meta.xml
<CustomField>
    <fullName>StudentID__c</fullName>
    <description>Student ID series and number</description>
    <inlineHelpText>Must match the following pattern: AA00000000</inlineHelpText>
    <label>Student ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>